--- a/Interview Questions/LeetCodePython.ipynb
+++ b/Interview Questions/LeetCodePython.ipynb
@@ -6,7 +6,7 @@
       "name": "LeetCodePython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPqsU8yPsyxvQbc+PL3aYQ9",
+      "authorship_tag": "ABX9TyOs18mejUdeROi5hLCg/y3K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1363,10 +1363,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1r6wxqq2aT16",
-        "outputId": "c7a61f2b-fc76-4876-cd9d-906f154caa43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7a61f2b-fc76-4876-cd9d-906f154caa43"
       },
       "source": [
         "# 1122. Relative Sort Array\r\n",
@@ -1386,7 +1386,7 @@
         "print(Distinct_arr1)\r\n",
         "print(arr1_sort)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1403,10 +1403,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Aa6bAj97b4TG",
-        "outputId": "dc7e76a5-f80b-4368-da35-3ccbad167311",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dc7e76a5-f80b-4368-da35-3ccbad167311"
       },
       "source": [
         "# Check for multiple ifelse conditions, if one of the condition is false return False, otherwise return True\r\n",
@@ -1426,7 +1426,7 @@
         "      break\r\n",
         "print(words)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1479,10 +1479,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AeG6GGNlgg-g",
-        "outputId": "b5538e62-65fe-4cc3-953c-8dfb7a67d5f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b5538e62-65fe-4cc3-953c-8dfb7a67d5f7"
       },
       "source": [
         "# 1133. Largest Unique Number\r\n",
@@ -1499,7 +1499,7 @@
         "else:\r\n",
         "  print(max(Input))"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1514,10 +1514,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "cqB7m1nBol6W",
-        "outputId": "d497bd9e-d21b-47d0-f30a-9fcf01105aa9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d497bd9e-d21b-47d0-f30a-9fcf01105aa9"
       },
       "source": [
         "# 1200. Minimum Absolute Difference\r\n",
@@ -1542,7 +1542,7 @@
         "    Output_arr.remove((i,j))\r\n",
         "print(Output_arr)"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1559,10 +1559,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-DKTA6Z0t23E",
-        "outputId": "f1fde971-3bb9-4e17-a5ce-1bae9c60aa4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1fde971-3bb9-4e17-a5ce-1bae9c60aa4a"
       },
       "source": [
         "# 1385. Find the Distance Value Between Two Arrays\r\n",
@@ -1581,7 +1581,7 @@
         "      break\r\n",
         "print(arr1)"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1595,26 +1595,68 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P6MqXhwwvQPl"
+        "id": "P6MqXhwwvQPl",
+        "outputId": "6aacd75d-f9d1-4694-a4b9-4c0c4b64a2dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# wrong\r\n",
         "# 766. Toeplitz Matrix\r\n",
         "# Given an m x n matrix, return true if the matrix is Toeplitz. Otherwise, return false.\r\n",
         "# A matrix is Toeplitz if every diagonal from top-left to bottom-right has the same elements.\r\n",
-        "\r\n",
-        "\r\n"
+        "# in a 4*4 matrix, there are 7 diagonals,indices points are [(3,0)], [(2,0),(3,1)], [(1,0),(2,1),(3,2)], [(0,0),(1,1),(2,2),(3,3)], [(0,1),(1,2),(2,3)], [(0,2),(1,3)],[(0,3)]\r\n",
+        "matrix = [[1,2,3,4],[5,1,2,3],[9,5,1,2]]\r\n",
+        "m = len(matrix)\r\n",
+        "n = len(matrix[0])\r\n",
+        "# Output: true\r\n",
+        "Output = True\r\n",
+        "for i in range(m):\r\n",
+        "  for j in range(n):\r\n",
+        "    while (i==0 or j==0) and i+1<m and j+1<n:\r\n",
+        "      # print(i,j)\r\n",
+        "      if matrix[i+1][j+1]==matrix[i][j]:\r\n",
+        "        Output=True\r\n",
+        "        i +=1 \r\n",
+        "        j +=1\r\n",
+        "        # print(i,j)\r\n",
+        "      else:\r\n",
+        "        Output=False\r\n",
+        "        break\r\n",
+        "print(Output)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 0\n",
+            "1 1\n",
+            "1 2\n",
+            "1 3\n",
+            "1 0\n",
+            "2 1\n",
+            "2 2\n",
+            "2 3\n",
+            "2 0\n",
+            "2 1\n",
+            "2 2\n",
+            "2 3\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "a-36EPbjsRK9",
-        "outputId": "9187dca4-ebcf-4596-de19-4997e5b38d46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9187dca4-ebcf-4596-de19-4997e5b38d46"
       },
       "source": [
         "# 1. Two Sum\r\n",
@@ -1629,7 +1671,7 @@
         "          if target==nums[i]+nums[j]:\r\n",
         "            print(i,j)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
