--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVAVFOjqj/I5/luPJRvHL4",
+      "authorship_tag": "ABX9TyP+KrqKkAKQAqIcBa2P34No",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,13 +44,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mtI4UrY9UawU",
-        "outputId": "b7568513-479e-4758-dde4-b2f860544dd9"
+        "outputId": "40cd99fb-7ea4-4a8d-cf93-8c6a583b5f57"
       },
       "source": [
         "import tensorflow as tf\r\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TW3SudWYUg9L",
-        "outputId": "c511a5b7-79d5-4a53-ae60-de7748c312a2"
+        "outputId": "2bc2345c-5518-4660-b694-aa4e9457e61b"
       },
       "source": [
         "model = tf.keras.models.Sequential([\r\n",
@@ -125,22 +125,22 @@
         "\r\n",
         "model.summary()\r\n"
       ],
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_17\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "flatten_11 (Flatten)         (None, 187500)            0         \n",
+            "flatten (Flatten)            (None, 187500)            0         \n",
             "_________________________________________________________________\n",
-            "dense_26 (Dense)             (None, 128)               24000128  \n",
+            "dense (Dense)                (None, 128)               24000128  \n",
             "_________________________________________________________________\n",
-            "dropout_11 (Dropout)         (None, 128)               0         \n",
+            "dropout (Dropout)            (None, 128)               0         \n",
             "_________________________________________________________________\n",
-            "dense_27 (Dense)             (None, 10)                1290      \n",
+            "dense_1 (Dense)              (None, 10)                1290      \n",
             "=================================================================\n",
             "Total params: 24,001,418\n",
             "Trainable params: 24,001,418\n",
@@ -181,6 +181,118 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BAD13tPtJ8UH"
+      },
+      "source": [
+        "#### Functional API \r\n",
+        "* The functional API can handle models with non-linear topology, shared layers, and even multiple inputs or outputs.\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oafu4KqeQn1j",
+        "outputId": "739834bd-89e5-4b06-f98c-be306f40abcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "inputs = tf.keras.Input(shape=(784,))\r\n",
+        "dense = tf.keras.layers.Dense(64, activation=\"relu\")\r\n",
+        "x = dense(inputs)\r\n",
+        "x = tf.keras.layers.Dense(64, activation=\"relu\")(x)\r\n",
+        "\r\n",
+        "outputs = tf.keras.layers.Dense(10)(x)\r\n",
+        "\r\n",
+        "model = tf.keras.Model(inputs=inputs, outputs=outputs, name=\"model_name\")\r\n",
+        "model.summary()\r\n",
+        "\r\n",
+        "# Fully Connected layers: Param #: (current layer neurons c * previous layer neurons p)+(current layer neurons)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_name\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_2 (InputLayer)         [(None, 784)]             0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 64)                50240     \n",
+            "_________________________________________________________________\n",
+            "dense_3 (Dense)              (None, 64)                4160      \n",
+            "_________________________________________________________________\n",
+            "dense_4 (Dense)              (None, 10)                650       \n",
+            "=================================================================\n",
+            "Total params: 55,050\n",
+            "Trainable params: 55,050\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7kHQNfGIQnyH",
+        "outputId": "f41a9dbd-fa9c-476a-d181-c92756b4878a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "encoder_input = tf.keras.Input(shape=(28, 28, 1), name=\"img\") # input_shape=(32,32,3) implies 32*32 color images. RGB = 3 channels\r\n",
+        "x = tf.keras.layers.Conv2D(16, 3, activation=\"relu\")(encoder_input) # 16 filters in the layers, filter size is 3*3 # output shape is 28-3+1=26 size and 16 filters. Param # is ((3*3*1)+1)*16\r\n",
+        "x = tf.keras.layers.Conv2D(32, 3, activation=\"relu\")(x) # 32 filters in the layers, filter size is 3*3\r\n",
+        "x = tf.keras.layers.MaxPooling2D(3)(x) \r\n",
+        "x = tf.keras.layers.Conv2D(32, 3, activation=\"relu\")(x)\r\n",
+        "x = tf.keras.layers.Conv2D(16, 3, activation=\"relu\")(x)\r\n",
+        "encoder_output = tf.keras.layers.GlobalMaxPooling2D()(x)\r\n",
+        "\r\n",
+        "encoder = tf.keras.Model(encoder_input, encoder_output, name=\"encoder\")\r\n",
+        "encoder.summary()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"encoder\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "img (InputLayer)             [(None, 28, 28, 1)]       0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_4 (Conv2D)            (None, 26, 26, 16)        160       \n",
+            "_________________________________________________________________\n",
+            "conv2d_5 (Conv2D)            (None, 24, 24, 32)        4640      \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_1 (MaxPooling2 (None, 8, 8, 32)          0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_6 (Conv2D)            (None, 6, 6, 32)          9248      \n",
+            "_________________________________________________________________\n",
+            "conv2d_7 (Conv2D)            (None, 4, 4, 16)          4624      \n",
+            "_________________________________________________________________\n",
+            "global_max_pooling2d_1 (Glob (None, 16)                0         \n",
+            "=================================================================\n",
+            "Total params: 18,672\n",
+            "Trainable params: 18,672\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -269,7 +381,20 @@
       "source": [
         "####  Convolutional Neural Network Models\r\n",
         "* They are comprised of models with convolutional layers that extract features (called feature maps) and pooling layers that distill features down to the most salient elements.\r\n",
-        "\r\n"
+        "* Stride denotes how many steps we are moving in each steps in convolution.\r\n",
+        "* Padding is a process of adding zeros to the input matrix symmetrically. Conv2D class can take one of two values: ‘valid’ or ‘same’.\r\n",
+        "\r\n",
+        "* Input & Output shapes: https://towardsdatascience.com/understanding-input-and-output-shapes-in-convolution-network-keras-f143923d56ca\r\n",
+        "  * Outputshape: (batch_size, 28, 28, 1): when batch_size=None there is no batch size value in the input_shape argument, we could go with any batch size while fitting the data.\r\n",
+        "  * You always have to feed a 4D array of shape (batch_size, height, width, depth) to the CNN.\r\n",
+        "  * Output data from CNN is also a 4D array of shape (batch_size, height, width, depth).\r\n",
+        "  * To add a Dense layer on top of the CNN layer, we have to change the 4D output of CNN to 2D using a Flatten layer.\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "* Number of parameters in CNN: https://towardsdatascience.com/understanding-and-calculating-the-number-of-parameters-in-convolution-neural-networks-cnns-fc88790d530d\r\n",
+        "  * ((m * n * d)+1)* k), = ((shape of width of the filter * shape of height of the filter * number of filters in the previous layer+1)*number of filters)\r\n",
+        "  * Pool layer has got no learnable parameters because all it does is calculate a specific number, no backprop learning involved! Thus number of parameters = 0\r\n"
       ]
     },
     {
@@ -317,7 +442,13 @@
       "source": [
         "#### Recurrent Neural Network Models\r\n",
         "* They have proven to be very effective for natural language processing problems where sequences of text are provided as input to the model. RNNs have also seen some modest success for time series forecasting and speech recognition.\r\n",
-        "* LSTMs expect each sample in the dataset to have two dimensions; the first is the number of time steps (in this case it is 5), and the second is the number of observations per time step (in this case it is 1)."
+        "* LSTMs expect each sample in the dataset to have two dimensions; the first is the number of time steps (in this case it is 5), and the second is the number of observations per time step (in this case it is 1).\r\n",
+        "\r\n",
+        "* Input and Output shapes in LSTM: https://shiva-verma.medium.com/understanding-input-and-output-shape-in-lstm-keras-c501ee95c65e\r\n",
+        "  * The input of the LSTM is always is a 3D array. (batch_size, time_steps, units)\r\n",
+        "  * The output of the LSTM could be a 2D array or 3D array depending upon the return_sequences argument.\r\n",
+        "  * If return_sequence is False, the output is a 2D array. (batch_size, units)\r\n",
+        "  * If return_sequence is True, the output is a 3D array. (batch_size, time_steps, units)\r\n"
       ]
     },
     {
@@ -382,7 +513,7 @@
         "# summarize the model\r\n",
         "model.summary()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +562,7 @@
         "# summarize the model\r\n",
         "plot_model(model, 'model.png', show_shapes=True)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +641,7 @@
         "pyplot.legend()\r\n",
         "pyplot.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +713,7 @@
         "# save model to file\r\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,7 +733,7 @@
         "yhat = model.predict([row])\r\n",
         "print('Predicted: %.3f' % yhat[0])"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
