--- a/Interview Questions/Daily_Coding_Problem.ipynb
+++ b/Interview Questions/Daily_Coding_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Daily Coding Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6wQl+91aDEnFTO83OULkc",
+      "authorship_tag": "ABX9TyP68kvZyVaR39v59o/3KQK3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hDYaos3pjqI9",
-        "outputId": "dc7db42f-4e86-401c-b913-34200b3ee2e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dc7db42f-4e86-401c-b913-34200b3ee2e4"
       },
       "source": [
         "# Given a list of numbers and a number k, return whether any two numbers from the list add up to k.\r\n",
@@ -64,11 +64,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gKz0yJkCpp-q",
-        "outputId": "79b48154-2514-4f5d-8983-6079afdafd13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gKz0yJkCpp-q",
+        "outputId": "79b48154-2514-4f5d-8983-6079afdafd13"
       },
       "source": [
         "# Given an array of integers, return a new array such that each element at index i of the new array is the product of all the numbers in the original array except the one at i.\r\n",
@@ -100,11 +100,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JeLKGTSqJ6Re",
-        "outputId": "0a034599-e676-4a49-f56d-5d7df8cdbe82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JeLKGTSqJ6Re",
+        "outputId": "0a034599-e676-4a49-f56d-5d7df8cdbe82"
       },
       "source": [
         "# Given an array of integers, find the first missing positive integer in linear time and constant space. In other words, find the lowest positive integer that does not exist in the array. The array can contain duplicates and negative numbers as well.\r\n",
@@ -130,11 +130,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uqgBGRyVJ6IT",
-        "outputId": "95b6a909-62b2-43e6-d7e6-7965a3cc2e86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uqgBGRyVJ6IT",
+        "outputId": "95b6a909-62b2-43e6-d7e6-7965a3cc2e86"
       },
       "source": [
         "strg ='1234'\r\n",
@@ -197,11 +197,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eJnEDcFGJ6OA",
-        "outputId": "53479d56-1f7c-4ea9-86cb-869280b01fd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eJnEDcFGJ6OA",
+        "outputId": "53479d56-1f7c-4ea9-86cb-869280b01fd1"
       },
       "source": [
         "# cons(a, b) constructs a pair, and car(pair) and cdr(pair) returns the first and last element of that pair. For example, car(cons(3, 4)) returns 3, and cdr(cons(3, 4)) returns 4.\r\n",
@@ -219,6 +219,59 @@
           "output_type": "stream",
           "text": [
             "<function cons.<locals>.pair at 0x7fa911533b70>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gfKjdQQF9gie"
+      },
+      "source": [
+        "### AlgoExpert"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gO1aQJat9gEl",
+        "outputId": "706dd8af-e3da-44eb-9f49-5045706a6010",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Validate Subsequence\r\n",
+        "# Given two non-empty arrays of integers, write a function that determines whether the second array is a subsequence of the first one.\r\n",
+        "# A subsequence of an array is a set of numbers that aren’t necessarily adjacent in the array but that are in the same order as they appear in the array.\r\n",
+        "# For example these numbers [2, 3, 5] are a subsequence of the array: [1, 2, 3, 4, 5]\r\n",
+        "# array = [5, 1, 22, 25, 6, -1, 8, 10] sequence = [1, 6, -1, 10]\r\n",
+        "array = [1, 1, 6, 1] # [5, 1, 22, 25, 6, -1, 8, 10] # [1, 2, 3, 4, 5]\r\n",
+        "sequence = [1, 1, 1, 6] #[5, 1, 22, 25, 6, -1, 8, 10] #[1, 6, -1, -1] # [2, 4, 5] \r\n",
+        "j=-1\r\n",
+        "valid_seq = True\r\n",
+        "for i in sequence:\r\n",
+        "  print(i,j)\r\n",
+        "  if i in array[j+1:]:\r\n",
+        "    j = array.index(i)\r\n",
+        "  else:\r\n",
+        "    valid_seq = False\r\n",
+        "    break\r\n",
+        "print(valid_seq)\r\n",
+        "    "
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 -1\n",
+            "1 0\n",
+            "1 0\n",
+            "6 0\n",
+            "True\n"
           ],
           "name": "stdout"
         }
