--- a/Interview Questions/Daily_Coding_Problem.ipynb
+++ b/Interview Questions/Daily_Coding_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Daily Coding Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP68kvZyVaR39v59o/3KQK3",
+      "authorship_tag": "ABX9TyO3DxhTwekPe0KmSwh17EdB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "    arr_outcome=False\r\n",
         "print(arr_outcome)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
         "  new_arr.append(int(Multiplied/i))\r\n",
         "print(new_arr)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         "    print(i)\r\n",
         "    break"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
         "      char_strg.append(strg[i:j+1])\r\n",
         "print(char_strg)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,10 +237,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gO1aQJat9gEl",
-        "outputId": "706dd8af-e3da-44eb-9f49-5045706a6010",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3ba350f6-ea1b-4e2d-bbb6-02f9fd604d80"
       },
       "source": [
         "# Validate Subsequence\r\n",
@@ -255,25 +255,53 @@
         "for i in sequence:\r\n",
         "  print(i,j)\r\n",
         "  if i in array[j+1:]:\r\n",
-        "    j = array.index(i)\r\n",
+        "    j = array.index(i,j+1) #array.index(item, stat, stop)\r\n",
         "  else:\r\n",
         "    valid_seq = False\r\n",
         "    break\r\n",
-        "print(valid_seq)\r\n",
-        "    "
+        "print(valid_seq)"
       ],
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "1 -1\n",
             "1 0\n",
-            "1 0\n",
-            "6 0\n",
-            "True\n"
+            "1 1\n",
+            "6 3\n",
+            "False\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_H0KHEeb60WB",
+        "outputId": "609382c8-0b76-4ca0-ce44-65ef0e586f8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "array = [1, 1, 6, 1] \r\n",
+        "array.index(1,2)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     }
